--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ main {
   .congrats {
     color: var(--ca-blue);
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
   }
 
   article {
